--- a/letschatroom.html
+++ b/letschatroom.html
@@ -37,6 +37,6 @@
 	<div id="output"></div>
 	</center>
 </div>
-<script src="kwitter_room.js"></script>
+<script src="letschatroom.js"></script>
 </body>
 </html>
