--- a/letschatroom.html
+++ b/letschatroom.html
@@ -19,7 +19,7 @@
 </head>
 <body>
 <div class="container">
-<button id="logout" class="glyphicon glyphicon-log-out btn btn-link" style="background-color: rgb(92, 255, 16); border-radius: 20px;"> Logout</button>
+<button id="logout" class="glyphicon glyphicon-log-out btn btn-link" style="background-color: rgb(156, 70, 70); border-radius: 20px;" onclick="logout()">Logout</button>
 	<center>
 		<h1 class="header">	
 			Chat Box
@@ -29,11 +29,11 @@
 		</h1>
 		<h3 class="color_white" id="welcome_user_name" style="text-decoration: underline;"></h3>
 		<div class="form-group input_div_room_page">
-			<label>Add Room:</label>
-			<input type="text" id="room_name" class="form-control" placeholder="Room Name" style="color: tomato; font-weight: bold;">
+			<label>#Add Room:</label>
+			<input type="text" id="room_name" class="form-control" placeholder="#Room Name" style="color: tomato; font-weight: bold;">
 		</div>
-		<button class="btn btn-link" onclick="addroom()" style="background-color: green; border-radius: 20px; color: yellow;">Add Room</button>
-		<h3 class="color_white">TRENDING ROOMS</h3>
+		<button class="btn btn-link" onclick="addroom()" style="background-color: green; border-radius: 20px; color: yellow;">#Add Room</button>
+		<h3 class="color_white">#TRENDINGROOMS</h3>
 	<div id="output"></div>
 	</center>
 </div>
